--- a/internal/package.json
+++ b/internal/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.10.3",
