--- a/internal/package.json
+++ b/internal/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html --dist-dir ../dist/ --public-url ./",
+    "build": "parcel build ./src/index.html --dist-dir ../dist/ --public-url ./ --no-cache",
     "watch": "parcel watch ./src/index.html --dist-dir ../dist/ --public-url ./"
   },
   "author": "",
