--- a/internal/package.json
+++ b/internal/package.json
@@ -1,36 +1,46 @@
 {
-  "name": "varmeplan",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "targets": {
-    "main": false
-  },
-  "scripts": {
-    "start": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html --dist-dir ../dist/ --public-url ./ --no-cache",
-    "watch": "parcel watch ./src/index.html --dist-dir ../dist/ --public-url ./"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@mdi/js": "^7.3.67",
-    "@mdi/react": "^1.6.1",
-    "@tanstack/react-table": "^8.10.7",
-    "bulma": "^0.9.4",
-    "chart.js": "^4.4.0",
-    "date-fns": "^2.30.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
-    "react-select": "^5.8.0"
-  },
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.10.3",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "parcel": "^2.10.3",
-    "process": "^0.11.10"
-  }
+    "name": "varmeplan",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "targets": {
+        "main": false
+    },
+    "parcel-namer-hashless": {
+        "include": [
+            ".js$",
+            ".css$"
+        ]
+    },
+    "scripts": {
+        "prebuild": "rimraf ../dist",
+        "start": "parcel serve ./src/html/index.html",
+        "build": "parcel build ./src/html/*.html --dist-dir ../dist/ --public-url ./ --no-cache --no-content-hash && npm run postbuild",
+        "postbuild": "python postbuild.py",
+        "watch": "parcel watch ./src/html/index.html --dist-dir ../dist/ --public-url ./"
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "@mdi/js": "^7.3.67",
+        "@mdi/react": "^1.6.1",
+        "@tanstack/react-table": "^8.10.7",
+        "bulma": "^0.9.4",
+        "chart.js": "^4.4.0",
+        "date-fns": "^2.30.0",
+        "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.18.0",
+        "react-select": "^5.8.0"
+    },
+    "devDependencies": {
+        "@parcel/transformer-sass": "^2.10.3",
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "parcel": "^2.10.3",
+        "parcel-namer-hashless": "^1.0.6",
+        "process": "^0.11.10",
+        "rimraf": "^5.0.5"
+    }
 }
