--- a/internal/package.json
+++ b/internal/package.json
@@ -5,17 +5,13 @@
     "main": "index.js",
     "targets": {
         "main": false
-    },
-    "parcel-namer-hashless": {
-        "include": [
-            ".js$",
-            ".css$"
-        ]
+    },"parcel-namer-hashless": {
+        "include": [".js$", ".css$"]
     },
     "scripts": {
         "prebuild": "rimraf ../dist",
         "start": "parcel serve ./src/html/index.html",
-        "build": "parcel build ./src/html/*.html --dist-dir ../dist/ --public-url ./ --no-cache --no-content-hash && npm run postbuild",
+        "build": "parcel build ./src/html/*.html --dist-dir ../dist/ --public-url ./ --no-cache --no-content-hash --no-source-maps && npm run postbuild",
         "postbuild": "python postbuild.py",
         "watch": "parcel watch ./src/html/index.html --dist-dir ../dist/ --public-url ./"
     },
